--- a/.air.toml
+++ b/.air.toml
@@ -14,7 +14,7 @@ tmp_dir = "bin/tmp"
   follow_symlink = false
   full_bin = ""
   include_dir = []
-  include_ext = ["go", "hbs"]
+  include_ext = ["go", "jet"]
   include_file = []
   kill_delay = "1s"
   log = "build-errors.log"
