Change root font size & flex layout

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "files.associations": {
     "*.css": "tailwindcss"
   },
+  "tailwindCSS.rootFontSize": 18,
   "tailwindCSS.includeLanguages": {
     "jet": "html"
   }
