add mongodb driver

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 BASE_URL="http://127.0.01:42069"
 GO_ENV="development"
+
+DB_URI="mongodb://username:password@host:port/?authSource=example"
+DB_NAME="example"
